# learning-real-world-haskell

./: .gitignore
ch1/: WC-w.hs  Wc-b.hs
ch11/: Arbitrary.hs  Prettify2.hs  QC-basics.hs  QC.hs  Run.hs
ch2/: lastButOne.hs
ch3/: BookStore.hs  List.hs  MySecond.hs  Tree.hs  Tuple.hs  exercises.hs
ch4/: Adler32.hs  Filter.hs  FirstWord.hs  FixLines.hs  Fold.hs  IntParse.hs  InteractWith.hs  Lambda.hs  Map.hs  Partial.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  TransposeText.hs  abc-in.txt  dlts.hs  exercises.hs  hello-in.txt  hello-out.txt
ch5/: Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  Trouble.hs  mypretty.cabal
ch6/: AutomaticDerivation.hs  JSONClass.hs  MyShow.hs  NewType.hs  NewtypeDiff.hs  SimpleClass.hs  colorderived.hs  eqclasses.hs  naiveeq.hs  overlap.hs  read.hs
ch7/: ArrayAsMonad.hs  basicio.hs  callingpure.hs  input.txt  output.txt  return1.hs  return2.hs  return3.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy4.hs
ch8/: ElfMagic.hs  GlobRegex.hs  GlobRegex2.hs  HighestCLose.hs  SumFile.hs
